use Fa3st 1.1.0-SNAPSHOT; remove sonar warnings